@@ -1,5 +1,12 @@
 2004-06-06  Ross Burton  <ross@burtonini.com>
 
+	* src/devilspie.c:
+	Watch all screens instead of just the default.  Hopefully this is
+	the right thing to do, and people don't run a devilspie for each
+	screen.
+	
+2004-06-06  Ross Burton  <ross@burtonini.com>
+
 	* src/devilspie-action-decorate.gob:
 	* src/flurb.c:
 	* src/Makefile.am
